[package]
name = "vls-util"
license = "Apache-2.0"
version = "0.13.0"
authors = ["Devrandom <c1.devrandom@niftybox.net>"]
edition = "2021"
description = "Utility functions for the Validating Lightning Signer"
homepage = "https://gitlab.com/lightning-signer/docs/"
repository = "https://gitlab.com/lightning-signer/validating-lightning-signer"
rust-version = "1.74.0"
build = "build.rs"

[features]
default = ["main"]
main = ["fern", "time"]
log_pretty_print = ["vls-core/log_pretty_print"]
otlp = ["opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp", "opentelemetry-semantic-conventions", "tracing-opentelemetry"]

[dependencies]
vls-core = { path = "../vls-core", version = "0.13.0" }
vls-frontend = { path = "../vls-frontend", version = "0.13.0" }
log = { workspace = true }
fern = { version = "0.6", features = ["colored"], optional = true }
time = { version = "=0.3.17", features = ["macros"], optional = true }
tokio = { version = "1.27", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["tracing-log", "env-filter", "fmt", "parking_lot", "ansi"] }
tracing-appender = "0.2.3"
opentelemetry = { version = "0.27.0", default-features = false, features = ["trace"], optional = true }
opentelemetry_sdk = { version = "0.27.1", default-features = false, features = ["trace", "rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.27.0", default-features = false, features = ["trace", "grpc-tonic"], optional = true }
opentelemetry-semantic-conventions = { version = "0.27.0", optional = true, features = ["semconv_experimental"]}
tracing-opentelemetry = { version = "0.28.0", optional = true }

[dev-dependencies]
tempfile = "3.17.1"
