[package]
name = "vlsd"
license = "Apache-2.0"
version = "0.13.0"
authors = ["Devrandom <c1.devrandom@niftybox.net>", "Ken Sedgwick <ken@bonsai.com>"]
edition = "2021"
description = "A Lightning signer that connects to the node using a gRPC protocol"
homepage = "https://gitlab.com/lightning-signer/docs/"
repository = "https://gitlab.com/lightning-signer/validating-lightning-signer"
rust-version = "1.74.0"
build = "build.rs"

[features]
default = ["grpc", "main"]
grpc = ["tokio", "tokio-stream", "tonic", "prost", "async-stream", "url"]
main = ["clap", "toml", "ctrlc", "fern"]
otlp = ["opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp", "opentelemetry-semantic-conventions", "tracing-opentelemetry"]
log_pretty_print = ["vls-core/log_pretty_print", "vls-frontend/log_pretty_print", "vls-protocol-signer/log_pretty_print"]
heapmon_requests = []

[dependencies]
vls-core = { path = "../vls-core", version = "0.13.0", features = ["use_backtrace"] }
vls-protocol-signer = { path = "../vls-protocol-signer", version = "0.13.0" }
vls-protocol = { path = "../vls-protocol", version = "0.13.0" }
vls-frontend = { path = "../vls-frontend", version = "0.13.0" }
vls-persist = { path = "../vls-persist", version = "0.13.0", default-features = false, features = ["std", "kvv", "redb-kvv"] }
lightning-storage-server = { path = "../lightning-storage-server/lib", version = "0.4.0", default-features = false }
log = "0.4"
time = { version = "=0.3.17", features = ["macros"] }
fern = { version = "0.6", features = ["colored"], optional = true }
clap = { workspace = true, optional = true, features = ["derive"] }
toml = { version = "0.5", optional = true }
http = "1.0"
tokio = { version = "1.27", features = ["macros", "rt-multi-thread"], optional = true }
tokio-stream = { version = "0.1", optional = true }
jsonrpsee = { version = "0.24.8", features = ["server"] }
tower = { workspace = true }
tower-http = { version = "0.6.0", features = ["auth"] }
tonic = { workspace = true, optional = true, features = ["server", "codegen", "channel", "prost"] }
prost = { workspace = true, optional = true }
ctrlc = { version = "3.4.5", features = ["termination"], optional = true }
triggered = "0.1"
async-stream = { version = "0.3", optional = true }
anyhow = "1.0"
thiserror = "1.0"
url = { version = "2.3", optional = true }
dirs = "4"
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["tracing-log", "env-filter", "fmt", "parking_lot", "ansi"] }
tracing-appender = "0.2.3"
opentelemetry = { version = "0.27.0", default-features = false, features = ["trace"], optional = true }
opentelemetry_sdk = { version = "0.27.1", default-features = false, features = ["trace", "rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.27.0", default-features = false, features = ["trace", "grpc-tonic"], optional = true }
opentelemetry-semantic-conventions = { version = "0.27.0", optional = true, features = ["semconv_experimental"]}
tracing-opentelemetry = { version = "0.28.0", optional = true }
txoo-bitcoind-client = { workspace = true }
serde = "1.0"
tempfile = "3.17.1"

[build-dependencies]
tonic-build = "0.12.0"

[lib]
name = "vlsd"
path = "src/lib.rs"

[[bin]]
# A signer that connects to the node using a gRPC protocol (to remote_hsmd_socket)
name = "vlsd2"
path = "src/main.rs"
