[package]
name = "vlsd"
license = "Apache-2.0"
version = "0.14.0-rc.2"
authors = ["Devrandom <c1.devrandom@niftybox.net>", "Ken Sedgwick <ken@bonsai.com>"]
edition = "2021"
description = "A Lightning signer that connects to the node using a gRPC protocol"
homepage = "https://gitlab.com/lightning-signer/docs/"
repository = "https://gitlab.com/lightning-signer/validating-lightning-signer"
rust-version = "1.74.0"
build = "build.rs"

[features]
default = ["grpc", "main"]
grpc = ["tokio", "tokio-stream", "tonic", "prost", "async-stream", "url"]
main = ["clap", "toml", "ctrlc", "fern"]
log_pretty_print = ["vls-core/log_pretty_print", "vls-frontend/log_pretty_print", "vls-protocol-signer/log_pretty_print", "vls-util/log_pretty_print"]
heapmon_requests = []

[dependencies]
vls-core = { path = "../vls-core", version = "0.14.0-rc.2", features = ["use_backtrace"] }
vls-common = { path = "../vls-common", version = "0.14.0-rc.2" }
vls-protocol-signer = { path = "../vls-protocol-signer", version = "0.14.0-rc.2" }
vls-protocol = { path = "../vls-protocol", version = "0.14.0-rc.2" }
vls-frontend = { path = "../vls-frontend", version = "0.14.0-rc.2" }
vls-persist = { path = "../vls-persist", version = "0.14.0-rc.2", default-features = false, features = ["std", "kvv", "redb-kvv"] }
vls-util = { path = "../vls-util", version = "0.14.0-rc.2" }
lightning-storage-server = { path = "../lightning-storage-server/lib", version = "0.5.0", default-features = false }
log = { workspace = true }
time = { version = "=0.3.17", features = ["macros"] }
fern = { version = "0.6", features = ["colored"], optional = true }
clap = { workspace = true, optional = true, features = ["derive"] }
toml = { version = "0.5", optional = true }
http = "1.0"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"], optional = true }
tokio-stream = { version = "0.1", optional = true }
jsonrpsee = { version = "0.24.8", features = ["server"] }
serde_json = { workspace = true, features = ["alloc"]}
tower = { workspace = true }
tower-http = { version = "0.6.0", features = ["auth"] }
tonic = { workspace = true, optional = true, features = ["server", "codegen", "channel", "prost"] }
prost = { workspace = true, optional = true }
ctrlc = { version = "3.4.5", features = ["termination"], optional = true }
triggered = "0.1"
async-stream = { version = "0.3", optional = true }
anyhow = { workspace = true, features = ["std"] }
thiserror = "1.0"
url = { workspace = true, optional = true }
dirs = "4"
tracing = { workspace = true, features = ["attributes", "std"] }
txoo-bitcoind-client = { workspace = true }
serde = { workspace = true, features = ["std"] }
tempfile = "3.17.1"

[dev-dependencies]
vls-core = { path = "../vls-core", version = "0.14.0-rc.2", features = ["use_backtrace", "test_utils"] }

[build-dependencies]
tonic-build = "0.12.0"

[lib]
name = "vlsd"
path = "src/lib.rs"

[[bin]]
# A signer that connects to the node using a gRPC protocol (to remote_hsmd_socket)
name = "vlsd"
path = "src/main.rs"
