[package]
name = "bindgen-test"
version = "0.1.0"
authors = ["Devrandom <c1.devrandom@niftybox.net>"]
edition = "2018"
rust-version = "1.60.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"

lightning-signer-core = { path = "../lightning-signer-core", default-features = false, features = ["no-std", "use_backtrace"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }

web-sys = { version = "0.3", features = ["console", "Crypto", "Window"] }
js-sys = "0.3"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
log = { version = "0.4", features = ["max_level_trace"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
opt-level = "s" # reduce flash size
lto = true # reduce flash size

[profile.dev]
opt-level = "s" # reduce flash size
lto = true # reduce flash size
