[package]
name = "lssd"
license = "Apache-2.0"
version = "0.4.0"
authors = ["Devrandom <c1.devrandom@niftybox.net>", "Lakshya Singh <lakshay.singh1108@gmail.com>"]
edition = "2021"
description = ""
homepage = "https://gitlab.com/lightning-signer/docs/"
repository = "https://gitlab.com/lightning-signer/validating-lightning-signer"
rust-version = "1.75.0"
# testcontainers increase the MSRV to 1.75.0 for development

[features]
dangerous-flags = []
postgres = ["tokio-postgres", "deadpool-postgres"]
cli = ["bitcoin_hashes", "url"]
test-etcd = ["etcd"]
etcd = ["etcd-client"]

[dependencies]
redb = "1.3"
ciborium = "0.2"
prost = { workspace = true }
triggered = "0.1"
ctrlc = "3"
tokio-postgres = { version = "0.7", optional = true }
deadpool-postgres = { version = "0.10", optional = true }
log = { workspace = true }
tonic = { workspace = true, features = ["tls"] }
hex = { workspace = true }
dirs = "6.0.0"
secp256k1 = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"
futures = "0.3"
itertools = ">=0.10,<0.14"
lightning-storage-server = { path = "../lib", version = "0.4.0" }
clap = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
time = { version = "=0.3.17", features = ["formatting", "macros"] }
fern = { version = "0.6", features = ["colored"] }
url = { version = "2.3", optional = true }
bitcoin_hashes = { workspace = true, optional = true }
etcd-client = { version = "0.14", optional = true }

[dev-dependencies]
lssd = { path = ".", features = ["postgres", "dangerous-flags", "cli", "etcd"] }
tempfile = "3"
bitcoin_hashes = { workspace = true }
test-log = "0.2.12"
testcontainers = "0.23.0"

[[bin]]
name = "lss-cli"
path = "src/client_main.rs"
required-features = ["cli"]

[[bench]]
name = "postgres_bench"
harness = false

[[bench]]
name = "redb_bench"
harness = false

[[bench]]
name = "etcd_bench"
harness = false