[package]
name = "lssd"
license = "Apache-2.0"
version = "0.5.0"
authors = ["Devrandom <c1.devrandom@niftybox.net>", "Lakshya Singh <lakshay.singh1108@gmail.com>"]
edition = "2021"
description = "The Lightning Storage Server Daemon"
homepage = "https://gitlab.com/lightning-signer/docs/"
repository = "https://gitlab.com/lightning-signer/validating-lightning-signer"
rust-version = "1.74.0"

[features]
dangerous-flags = []
postgres = ["tokio-postgres", "deadpool-postgres"]
cli = ["bitcoin_hashes", "url"]
test-etcd = ["etcd"]
etcd = ["etcd-client"]

[dependencies]
lightning-storage-server = { path = "../lib", version = "0.5.0" }
redb1 = { package = "redb", version = "1.3" }
redb = "2.2.0"
ciborium = "0.2"
prost = { workspace = true }
triggered = "0.1"
ctrlc = "3"
tokio-postgres = { version = "0.7", optional = true }
deadpool-postgres = { version = "0.10", optional = true }
log = { workspace = true }
tonic = { workspace = true, features = ["tls"] }
hex = { workspace = true }
dirs = "6.0.0"
secp256k1 = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"
futures = "0.3"
itertools = ">=0.10,<0.14"
clap = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
time = { version = "=0.3.17", features = ["formatting", "macros"] }
fern = { version = "0.6", features = ["colored"] }
url = { version = "2.3", optional = true }
bitcoin_hashes = { workspace = true, optional = true }
etcd-client = { version = "0.14", optional = true }

[[bin]]
name = "lss-cli"
path = "src/client_main.rs"
required-features = ["cli"]
